--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
 </head>
 <body>
 
-    <h3>Click Counter</h3>
-    <button id="clickme">Click me: 0</button>
-
-    <h5>Good practice: no JavaScript code in HTML</h5>
-
-
+  
 
     <header>
         <h1>Bud Spencer</h1>
@@ -62,7 +57,7 @@
 
 -->
 <footer>
-    <h1>Dominik Duda</h1>
+    <h1>Bud Spencer</h1>
 </footer>
 </body>
 </html>
