--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Ohhhh - So schöne Movies">
     <title>CodeReview 5</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel='stylesheet' type='text/css' media='screen' href='style/style.css'>
     <link rel="icon" type="image/png" sizes="32x32"
     href="favicon/favicon-32x32.png">
@@ -28,9 +29,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-         
-
-        </ul>
+                 </ul>
 
     </nav>
    <h2>Filmographie<span id="sort">&#9654;SORT</span></h2>
